タイトル変えた

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>私のレシピコレクション</title>
+  <title>🍚</title>
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/script.js"></script>
 </head>
