--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="title">鶏むね豆腐ハンバーグ</div>
           </a>
         </div>
-        <div class="recipe-card" data-tags=",ヘルシー,米粉,スイーツ,筋肉">
+        <div class="recipe-card" data-tags="肉系">
           <a href="recipe/recipe2.html">
-            <div class="title">２</div>
+            <div class="title">パンチェッタ</div>
           </a>
         </div>
         <div class="recipe-card" data-tags="魚系,ヘルシー,筋肉">
