--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </a>
           </div>
           <div class="recipe-card">
-            <a href="recipe/recipe3.html">
-              <div class="title">３</div>
+            <a href="plan/hokkaido.html">
+              <div class="title">𝓓𝓮𝓴𝓴𝓪𝓲𝓭𝓸...🥔</div>
             </a>
           </div>
         </section>
