--- a/plan/hokkaido.html
+++ b/plan/hokkaido.html
@@ -13,42 +13,43 @@
       <h1>𝓓𝓮𝓴𝓴𝓪𝓲𝓭𝓸...🥔</h1>
       <section>
         <h2 id="toggleButton1" style="cursor: pointer;">2日目プラン 🙈</h2>
-<!--         <div id="checklist1" style="display: none;"> -->
-          <ul class="time-schedule">
-  <li>
-    <span class="time">9:20</span>
-    <div class="sch_box"><p class="sch_title">タイトル</p>
-      <p class="sch_tx">
-      内容テキストテキストテキスト<br>テキストテキストテキストテキスト
-      </p>
-   </div>
-  </li>
-  <li>
-    <span class="time">10:00</span>
-    <div class="sch_box">
-     <p class="sch_title">タイトル</p>
-      <p class="sch_tx">内容テキスト
-      </p>
-    </div>
-  </li>
-  <li>
-    <span class="time">11:00</span>
-    <div class="sch_box"><p class="sch_title">タイトル</p>
-      <p class="sch_tx">
-      内容テキスト
-      </p>
-    </div>
-  </li>
-  <li>
-    <span class="time">12:00</span>
-    <div class="sch_box"><p class="sch_title">タイトル</p>
-      <p class="sch_tx">
-      内容テキスト
-      </p>
-    </div>
-  </li>
-</ul>
-<!--         </div> -->
+        <div id="checklist1" style="display: none;">
+          <table >
+            <tr><th></th><th></th> <th></th></tr>
+            <tr><td class="time">09:30　</td><td class="plan">ホテル出発</td></tr>
+            <tr><td class="time">　｜</td><td></td><td>
+              <a href="https://maps.app.goo.gl/cChxLTJPa7FiYmJ89">ニコレン</a>へ移動</td </tr>
+              <tr><td class="time">10:00</td><td class="plan">レンタカー店到着・手続き</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>札幌護国神社へ移動</td></tr>
+              <tr><td class="time">10:30</td><td class="plan">札幌護国神社到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>お守り・御朱印購入</td></tr>
+              <tr><td class="time">11:00</td><td class="plan">札幌護国神社を出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>とれのさとへ移動</td></tr>
+              <tr><td class="time">11:45</td><td class="plan">JAとれのさと到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>🥔爆買い</td></tr>
+              <tr><td class="time">12:15</td><td class="plan">JAとれのさとを出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>サーモンファクトリーへ移動</td></tr>
+              <tr><td class="time">12:30</td><td class="plan">サーモンファクトリー到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>お土産購入・食べ歩き</td></tr>
+              <tr><td class="time">13:00</td><td class="plan">サーモンファクトリーを出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>ロイズタウン工場へ移動</td></tr>
+              <tr><td class="time">13:30</td><td class="plan">ロイズタウン工場到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>パン・お土産購入</td></tr>
+              <tr><td class="time">14:15</td><td class="plan">ロイズタウン工場を出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>当別神社へ移動</td></tr>
+              <tr><td class="time">14:30</td><td class="plan">当別神社到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>お守り・御朱印購入</td></tr>
+              <tr><td class="time">15:00</td><td class="plan">当別神社を出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>はまなすの丘公園へ移動</td></tr>
+              <tr><td class="time">15:30</td><td class="plan">はまなすの丘公園到着</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td>灯台周辺散策・買ったパン食べる</td></tr>
+              <tr><td class="time">16:30</td><td class="plan">はまなすの丘公園を出発</td><td></td></tr>
+              <tr><td class="time">　｜</td><td></td><td></td></tr>
+              <tr><td class="time">17:30</td><td class="plan">ホテル到着</td><td></td></tr>
+        
+          </table>
+
+        </div>
       </section>
 
       <section>
@@ -74,6 +75,9 @@
           <label><input type="checkbox">ハンカチ</label><br>
           <label><input type="checkbox">財布</label><br>
           <label><input type="checkbox">エコバッグ</label><br>
+          <label><input type="checkbox">モバイルバッテリー</label><br>
+          <label><input type="checkbox">毛糸とかぎ針</label><br>
+          <label><input type="checkbox">御朱印帳</label><br>
           <label><input type="checkbox"></label><br>
           <label><input type="checkbox"></label><br>
         </div>
@@ -86,9 +90,9 @@
           <label><input type="checkbox">生ノースマン(家用)</label><br>
           <label><input type="checkbox">ぽてこたん(家用)</label><br>
           <label><input type="checkbox">ぽてこたん(会社用)</label><br>
-          <label><input type="checkbox"></label><br>
-          <label><input type="checkbox"></label><br>
-          <label><input type="checkbox"></label><br>
+          <label><input type="checkbox">ロイズのチョコ(会社用)</label><br>
+          <label><input type="checkbox">父用お土産</label><br>
+          <label><input type="checkbox">札幌農学校チーズクッキー</label><br>
           <label><input type="checkbox"></label><br>
           <label><input type="checkbox"></label><br>
         </div>
