--- a/plan/hokkaido.html
+++ b/plan/hokkaido.html
@@ -16,36 +16,36 @@
         <div id="checklist1" style="display: none;">
           <table >
             <tr><th></th><th></th> <th></th></tr>
-            <tr><td class="time">09:30🌷</td><td class="plan">ホテル出発</td></tr>
-            <tr><td class="time">　｜</td><td>
-              <a href="https://maps.app.goo.gl/cChxLTJPa7FiYmJ89">　ニコレン</a>へ移動</td> </tr>
-              <tr><td class="time">10:00🌷</td><td class="plan">レンタカー店到着・手続き</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　札幌護国神社へ移動</td></tr>
-              <tr><td class="time">10:30🌷</td><td class="plan">札幌護国神社到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　お守り・御朱印購入</td></tr>
-              <tr><td class="time">11:00🌷</td><td class="plan">札幌護国神社を出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　とれのさとへ移動</td></tr>
-              <tr><td class="time">11:45🌷</td><td class="plan">JAとれのさと到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　🥔爆買い</td></tr>
-              <tr><td class="time">12:15🌷</td><td class="plan">JAとれのさとを出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　サーモンファクトリーへ移動</td></tr>
-              <tr><td class="time">12:30🌷</td><td class="plan">サーモンファクトリー到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　お土産購入・食べ歩き</td></tr>
-              <tr><td class="time">13:00🌷</td><td class="plan">サーモンファクトリーを出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　ロイズタウン工場へ移動</td></tr>
-              <tr><td class="time">13:30🌷</td><td class="plan">ロイズタウン工場到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　パン・お土産購入</td></tr>
-              <tr><td class="time">14:15🌷</td><td class="plan">ロイズタウン工場を出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　当別神社へ移動</td></tr>
-              <tr><td class="time">14:30🌷</td><td class="plan">当別神社到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　お守り・御朱印購入</td></tr>
-              <tr><td class="time">15:00🌷</td><td class="plan">当別神社を出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　はまなすの丘公園へ移動</td></tr>
-              <tr><td class="time">15:30🌷</td><td class="plan">はまなすの丘公園到着</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　灯台周辺散策・買ったパン食べる</td></tr>
-              <tr><td class="time">16:30🌷</td><td class="plan">はまなすの丘公園を出発</td><td></td></tr>
-              <tr><td class="time">　｜</td><td>　ホテルに戻る</td></tr>
-              <tr><td class="time">17:30🌷</td><td class="plan">ホテル到着</td><td></td></tr>
+              <tr><td class="time">09:30<td>🌷</td></td><td class="plan">ホテル出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　
+              <a href="https://maps.app.goo.gl/cChxLTJPa7FiYmJ89">ニコレン</a>へ移動</td> </tr>
+              <tr><td class="time">10:00<td>🌷</td></td><td class="plan">レンタカー店到着・手続き</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　札幌護国神社へ移動</td></tr>
+              <tr><td class="time">10:30<td>🌷</td></td><td class="plan">札幌護国神社到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　お守り・御朱印購入</td></tr>
+              <tr><td class="time">11:00<td>🌷</td></td><td class="plan">札幌護国神社を出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　とれのさとへ移動</td></tr>
+              <tr><td class="time">11:45<td>🌷</td></td><td class="plan">JAとれのさと到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　🥔爆買い</td></tr>
+              <tr><td class="time">12:15<td>🌷</td></td><td class="plan">JAとれのさとを出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　サーモンファクトリーへ移動</td></tr>
+              <tr><td class="time">12:30<td>🌷</td></td><td class="plan">サーモンファクトリー到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　お土産購入・食べ歩き</td></tr>
+              <tr><td class="time">13:00<td>🌷</td></td><td class="plan">サーモンファクトリーを出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　ロイズタウン工場へ移動</td></tr>
+              <tr><td class="time">13:30<td>🌷</td></td><td class="plan">ロイズタウン工場到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　パン・お土産購入</td></tr>
+              <tr><td class="time">14:15<td>🌷</td></td><td class="plan">ロイズタウン工場を出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　当別神社へ移動</td></tr>
+              <tr><td class="time">14:30<td>🌷</td></td><td class="plan">当別神社到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　お守り・御朱印購入</td></tr>
+              <tr><td class="time">15:00<td>🌷</td></td><td class="plan">当別神社を出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　はまなすの丘公園へ移動</td></tr>
+              <tr><td class="time">15:30<td>🌷</td></td><td class="plan">はまなすの丘公園到着</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　灯台周辺散策・買ったパン食べる</td></tr>
+              <tr><td class="time">16:30<td>🌷</td></td><td class="plan">はまなすの丘公園を出発</td></tr>
+              <tr><td class="time">　｜</td><td></td><td>　ホテルに戻る</td></tr>
+              <tr><td class="time">17:30<td>🌷</td></td><td class="plan">ホテル到着</td></tr>
         
           </table>
 
@@ -93,7 +93,7 @@
           <label><input type="checkbox">ロイズのチョコ(会社用)</label><br>
           <label><input type="checkbox">父用お土産</label><br>
           <label><input type="checkbox">札幌農学校チーズクッキー</label><br>
-          <label><input type="checkbox">二三一のニシンバッテラ</label><br>
+          <label><input type="checkbox"></label><br>
           <label><input type="checkbox"></label><br>
         </div>
       </section>
